[project]
name = "linak-controller"
version = "1.3.2"
description = "Command line tool for controlling the Linak standing desks"
authors = [{ name = "Rhys Tyers" }]
requires-python = ">=3.9"
license = {text = "MIT"}
readme = "README.md"
dependencies = [
    "aiohttp>=3.8.4,<4",
    "appdirs>=1.4.4,<2",
    "bleak>=1.1.1,<2",
    "PyYAML~=6.0",
]

[project.urls]
Homepage = "https://github.com/rhyst/linak-controller"
Repository = "https://github.com/rhyst/linak-controller"
Changelog = "https://github.com/rhyst/linak-controller/blob/main/CHANGELOG.md"
Issues = "https://github.com/rhyst/linak-controller/issues"

[project.scripts]
linak-controller = "linak_controller.main:init"
idasen-controller = "linak_controller.main:init"

[dependency-groups]
dev = ["black>=23.10.1,<24"]

[tool.uv.workspace]
members = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
